# K-Medoids-C

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: kmedoid.c  kmedoid.h
test/: test_main.c
test/tests/: test_base.c  test_base.h
